update conference details from ATSF 2026 to ICME 2026, including new dates and location

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
         <div class="absolute inset-0 bg-white/40"></div>
         <div class="glass p-12 rounded-3xl max-w-4xl mx-auto animate-fadeInUp white-glow">
             <h1 class="text-6xl md:text-7xl font-bold mb-4 bg-gradient-to-r from-purple-800 via-purple-600 to-purple-400 bg-clip-text text-transparent drop-shadow-2xl">
-                ATSF 2026
+                ICME 2026
             </h1>
-            <p class="text-2xl md:text-3xl mb-6 font-light text-gray-700">International Conference on Approximation Theory & Special Functions</p>
+            <p class="text-2xl md:text-3xl mb-6 font-light text-gray-700">International Conference on Mathematics and Engineering</p>
             <div class="space-y-2 text-xl mb-8 text-gray-600">
-                <p><i class="fas fa-calendar-alt text-purple-600 mr-2"></i>September 2–5, 2026</p>
-                <p><i class="fas fa-map-marker-alt text-purple-600 mr-2"></i>TOBB ETU, Ankara, Türkiye</p>
+                <p><i class="fas fa-calendar-alt text-purple-600 mr-2"></i>Mid March , 2026</p>
+                <p><i class="fas fa-map-marker-alt text-purple-600 mr-2"></i>Global Institute Of Technology And Management Gurugram,India</p>
             </div>
             <a href="#about" class="bg-white hover:bg-purple-50 backdrop-blur-sm px-12 py-4 rounded-2xl text-xl font-semibold transition-all duration-300 inline-block border-2 border-purple-200 hover:border-purple-400 purple-glow text-purple-800 shadow-xl">
                 Explore Conference
@@ -104,27 +104,27 @@
     <!-- About Section -->
     <section id="about" class="py-24 px-4 md:px-8">
         <div class="max-w-6xl mx-auto">
-            <h2 class="text-4xl md:text-5xl font-bold text-center mb-16 bg-gradient-to-r from-purple-800 to-purple-400 bg-clip-text text-transparent animate-fadeInUp">About ATSF</h2>
+            <h2 class="text-4xl md:text-5xl font-bold text-center mb-16 bg-gradient-to-r from-purple-800 to-purple-400 bg-clip-text text-transparent animate-fadeInUp">About ICME</h2>
             <div class="grid md:grid-cols-2 gap-12 items-center">
                 <div class="animate-fadeInUp delay-200">
-                    <p class="text-xl leading-relaxed mb-6 text-gray-700">ATSF is an international conference series organized to bring together researchers from ALL areas of Approximation Theory and Special Functions to discuss new ideas and new applications. The series began in 2013 and gathers researchers worldwide, with its 8th edition in 2024 hosting 250 scientists from 30 different countries.[attached_file:1]</p>
-                    <p class="text-xl leading-relaxed text-gray-700">The ATSF 2026 is the 9th event, fostering interaction between theoretical developments and applications in numerical analysis and related fields.</p>
+                    <p class="text-xl leading-relaxed mb-6 text-gray-700">ICME is an international conference series organized to bring together researchers from ALL areas of Engineering And Mathematics to discuss new ideas and new applications. </p>
+                    <p class="text-xl leading-relaxed text-gray-700">The ICME 2026 is the 9th event, fostering interaction between theoretical developments and applications in numerical analysis and related fields.</p>
                 </div>
                 <div class="grid grid-cols-2 gap-4 animate-fadeInUp delay-400">
-                    <div class="glass p-6 rounded-2xl text-center purple-glow">
+                    <!-- <div class="glass p-6 rounded-2xl text-center purple-glow">
                         <div class="text-3xl font-bold text-purple-700 mb-2">9th</div>
                         <div class="text-gray-600 font-semibold">Edition</div>
-                    </div>
+                    </div> -->
                     <div class="glass p-6 rounded-2xl text-center purple-glow">
                         <div class="text-3xl font-bold text-purple-700 mb-2">250+</div>
-                        <div class="text-gray-600 font-semibold">Participants (2024)</div>
+                        <div class="text-gray-600 font-semibold">Participants (2026)</div>
                     </div>
                     <div class="glass p-6 rounded-2xl text-center purple-glow">
-                        <div class="text-3xl font-bold text-purple-700 mb-2">2013</div>
+                        <div class="text-3xl font-bold text-purple-700 mb-2">2026</div>
                         <div class="text-gray-600 font-semibold">Started</div>
                     </div>
                     <div class="glass p-6 rounded-2xl text-center purple-glow">
-                        <div class="text-3xl font-bold text-purple-700 mb-2">30+</div>
+                        <div class="text-3xl font-bold text-purple-700 mb-2">20+</div>
                         <div class="text-gray-600 font-semibold">Countries</div>
                     </div>
                 </div>
@@ -139,20 +139,20 @@
             <ul class="grid md:grid-cols-2 gap-6 text-xl">
                 <li class="glass-purple p-8 rounded-2xl hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-100">
                     <i class="fas fa-brain text-purple-600 text-2xl mb-4 block"></i>
-                    <span class="font-bold text-gray-800 block mt-2">Approximation Theory</span>
+                    <span class="font-bold text-gray-800 block mt-2">All Ares Of Mathematics</span>
                 </li>
                 <li class="glass-purple p-8 rounded-2xl hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-200">
                     <i class="fas fa-calculator text-purple-600 text-2xl mb-4 block"></i>
-                    <span class="font-bold text-gray-800 block mt-2">Summability Theory</span>
+                    <span class="font-bold text-gray-800 block mt-2">All Ares Of Engineering</span>
                 </li>
-                <li class="glass-purple p-8 rounded-2xl hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
+                <!-- <li class="glass-purple p-8 rounded-2xl hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
                     <i class="fas fa-chart-line text-purple-600 text-2xl mb-4 block"></i>
                     <span class="font-bold text-gray-800 block mt-2">Orthogonal Polynomials</span>
-                </li>
-                <li class="glass-purple p-8 rounded-2xl hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-400">
+                </li> -->
+                <!-- <li class="glass-purple p-8 rounded-2xl hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-400">
                     <i class="fas fa-star text-purple-600 text-2xl mb-4 block"></i>
                     <span class="font-bold text-gray-800 block mt-2">Special Functions</span>
-                </li>
+                </li> -->
             </ul>
             <p class="text-center mt-12 text-lg text-gray-600 font-semibold">(But not limited to)</p>
         </div>
@@ -165,17 +165,32 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-100">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-400 to-purple-600 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">OA</div>
-                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Prof. Octavian Agratini</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr. Harun Cicek</h3>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-200">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">GA</div>
-                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Prof. George A. Anastassiou</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr. Nadeem Rao</h3>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
-                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Prof. Nazife Erkurşun Özcan</h3>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Deena Sunil</h3>
+                    <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
+                </div>
+                <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
+                    <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Shah Jahan</h3>
+                    <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
+                </div>
+                <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
+                    <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Resat Aslam</h3>
+                    <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
+                </div>
+                <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
+                    <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
+                    <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Khurshed Jamal Ansari</h3>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
             </div>
@@ -184,7 +199,7 @@
     </section>
 
     <!-- History Section -->
-    <section id="history" class="py-24 px-4 md:px-8">
+    <!-- <section id="history" class="py-24 px-4 md:px-8">
         <div class="max-w-4xl mx-auto">
             <h2 class="text-4xl md:text-5xl font-bold text-center mb-12 bg-gradient-to-r from-purple-800 to-purple-400 bg-clip-text text-transparent animate-fadeInUp">Series History</h2>
             <div class="space-y-4">
@@ -203,7 +218,7 @@
             </div>
             <p class="text-center mt-8 text-lg text-gray-600 font-medium">Started in 2013 in Greece.</p>
         </div>
-    </section>
+    </section> -->
 
     <!-- Proceedings Section -->
     <section id="proceedings" class="py-24 px-4 md:px-8">
