--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <p class="text-2xl md:text-3xl mb-6 font-light text-gray-700">International Conference on Mathematics and Engineering</p>
             <div class="space-y-2 text-xl mb-8 text-gray-600">
                 <p><i class="fas fa-calendar-alt text-purple-600 mr-2"></i>Mid March , 2026</p>
-                <p><i class="fas fa-map-marker-alt text-purple-600 mr-2"></i>Global Institute Of Technology And Management Gurugram,India</p>
+                <p><i class="fas fa-map-marker-alt text-purple-600 mr-2"></i>Global Institute Of Technology And Management , Gurugram,India</p>
             </div>
             <a href="#about" class="bg-white hover:bg-purple-50 backdrop-blur-sm px-12 py-4 rounded-2xl text-xl font-semibold transition-all duration-300 inline-block border-2 border-purple-200 hover:border-purple-400 purple-glow text-purple-800 shadow-xl">
                 Explore Conference
@@ -161,36 +161,43 @@
     <!-- Speakers Section -->
     <section id="speakers" class="py-24 px-4 md:px-8">
         <div class="max-w-6xl mx-auto">
+            
             <h2 class="text-4xl md:text-5xl font-bold text-center mb-16 bg-gradient-to-r from-purple-800 to-purple-400 bg-clip-text text-transparent animate-fadeInUp">Confirmed Speakers</h2>
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-100">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-400 to-purple-600 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">OA</div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr. Harun Cicek</h3>
+                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Turkey</span>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-200">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-500 to-pink-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">GA</div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr. Nadeem Rao</h3>
+                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Chandigarh University</span>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Deena Sunil</h3>
+                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Central University Of Madhya Pardesh</span>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Shah Jahan</h3>
+                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Central University Of Haryana</span>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Resat Aslam</h3>
+                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Turkey</span>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
                 <div class="glass p-6 rounded-2xl text-center hover:scale-105 hover:purple-glow transition-all duration-300 animate-fadeInUp delay-300">
                     <div class="w-24 h-24 bg-gradient-to-r from-purple-600 to-indigo-500 rounded-full mx-auto mb-4 flex items-center justify-center text-xl font-bold text-white">NEO</div>
                     <h3 class="text-xl font-semibold mb-2 text-gray-800">Dr.Khurshed Jamal Ansari</h3>
+                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">KAU , Saudi Arabia</span>
                     <span class="bg-purple-100 text-purple-700 px-3 py-1 rounded-full text-sm font-medium">Confirmed</span>
                 </div>
             </div>
